Interviiew-TF Code-&-Yaml/Pipeline/Microservices_pipeline/TodoAppProject (1)/todoapp_manifest/todoapp-frontend/todouisvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoui
spec:
  selector:
    app: todoui
  ports:
  - port: 80
    targetPort: 80
