Interviiew-TF Code-&-Yaml/Pipeline/Microservices_pipeline/TodoAppProject (1)/todoapp_manifest/todoapp-frontend/todouiingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todoui
  labels:
    name: todoui
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: todoui.akservices.tech
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: todoui
            port: 
              number: 80
